--- a/src/osl-update.tex
+++ b/src/osl-update.tex
@@ -93,11 +93,23 @@ For practical purposes, one needs not only a compiler to turn OSL code into Halo
 
 As of this writing, the OSL compiler and the argument compiler exist and pass tests, but they use a notion of circuits which is not exactly compatible with Halo 2. The disconnect is that the notion of circuits targeted in the OSL compiler features lookup arguments gated by polynomial expressions, such that the lookup arguments only apply at rows where the gate expression is zero, whereas Halo 2 only supports lookup arguments gated by fixed selector columns. There is nothing that prevents this gap from being bridged efficiently, and work to bridge the gap is underway as of this writing.
 
-In the previously published constructions of Halo 2 circuits from logic circuits, \cite{sigma11,sigma11-poly-bounds}, each row of the Halo 2 circuit corresponds to one row of the source logic circuit. Because the constraints in a logic circuit can imply a lot of complex constraints on one row, the complexity of the polynomials in the resulting Halo 2 circuits tends to be exceedingly high in the previously published constructions. The solution to this problem in the trace type based compilation pipeline is to let one row in the logic circuit correspond to many rows in the resulting Halo 2 circuit. In this newer construction, each row of the Halo 2 circuit verifies the evaluation of one subexpression at one row of the logic circuit. A subexpression can be a term, a subformula of a gate constraint, or an assertion that a subformula is true.
+In the previously published constructions of Halo 2 circuits from logic circuits, \cite{sigma11,sigma11-poly-bounds}, each row of the Halo 2 circuit corresponds to one row of the source logic circuit. Because the constraints in a logic circuit can imply a lot of complex constraints on one row, the complexity of the polynomials in the resulting Halo 2 circuits tends to be exceedingly high in the previously published constructions. The solution to this problem in the trace type based compilation pipeline is to let one row in the logic circuit correspond to many rows in the resulting Halo 2 circuit. In this newer construction, each row of the Halo 2 circuit verifies the evaluation of one subexpression at one row of the logic circuit. A subexpression can be a term, a (sub)formula of a gate constraint, or an assertion that a gate constraint formula is true.
+
+A ``trace'' is a value which can satisfy or fail to satisfy a trace type. A trace consists of a statement, a witness, and a map from cases to maps from subexpression ids to subexpression traces. A subexpression trace consists of the value of the subexpression (a field element), the step type id of the subexpression, and the associated advice values (a map from column indexes to field elements). Each row of a logic circuit input matrix corresponds to one case of the corresponding trace. Each information bearing row of the resulting Halo 2 circuit input matrix corresponds to one subexpression trace of one case.
+
+Similar to a Halo 2 circuit, a trace type defines a map from column indices to their column types (fixed, advice, or instance). It defines a set of equality constrainable column indices. It defines equality constraints. Each equality constraint is isomorphic to a set of cell references (which are isomorphic to pairs of column indices and (absolute) row indices). A trace type defines the values at each \emph{case}\/ of each fixed column.
+
+A trace type defines a map from step type ids to step type definitions. A step type definition essentially defines a set of polynomial gate constraints, a set of Halo 2 lookup arguments, and some fixed values. As with the fixed values associated with the trace type overall, the fixed values associated with a step type define one value per \emph{case}, i.e. one value per row of the source logic circuit, as opposed to one value per row of the output Halo 2 circuit. This means that all rows associated with a given case have the same fixed values, as far as those fixed values defined by the step type go.
+
+A trace type defines a set of subexpression ids and a set of subexpression links. Each subexpression link is of the form $\vec{i} \mapsto^t o$, where $o$ is a subexpression id (the output subexpression), $\vec{i}$ is a vector of subexpression ids (the input subexpressions), and $t$ is a step type id.
+
+It is legal for there to be different subexpression links with the same output; this entails that that subexpression's value can validly be determined based on more than one step type and/or more than one input vector. So that each output subexpression value is uniquely defined by the logic circuit inputs, it should be that in any case, all links that can be instantiated for an output $o$ result in the same value of $o$.
+
+The motivating example of having multiple links with the same output is short circuiting evaluation. For example, if $x = 0$, then $x \times y = 0$. So we can have three links outputting $x \times y$, one of which takes $x$ as input and works when $x = 0$ and the output is 0, one of which takes $y$ as input and works when $y = 0$ and the output is 0, and one of which takes $x$ and $y$ as input and works for any values of $x$ and $y$.
 
 TODO: describe trace types
 
-TODO: future directions
+TODO: future directions: finishing, optimization, verification
 
 
 \clearpage
